--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,16 @@ body {
 	min-height: 100vh;
 }
 
+.visuallyhidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 #app {
 	max-width: 1280px;
 	margin: 0 auto;
