--- a/src/style.css
+++ b/src/style.css
@@ -11,10 +11,15 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+  --color-light-gray: #d3d3d3;
+  --color-border: #666;
+  --color-border-checked: blue;
+  --color-background: #f7f7f7;
 }
 
 body {
-	margin: 0;
+	margin: 0 0 2rem;
 	display: flex;
 	align-items: center;
 	min-height: 100vh;
@@ -31,30 +36,16 @@ body {
 }
 
 #app {
-	max-width: 1280px;
-	margin: 0 auto;
+	max-width: 60rem;
+	margin-inline: auto;
 	text-align: center;
-}
-
-:root {
-  --color-light-gray: #d3d3d3;
-  --color-border: #666;
-  --color-border-checked: blue;
-  --color-background: #f7f7f7;
-}
-
-.container-fluid {
-  padding-inline: 0.9375rem;
-  margin-inline: auto;
 }
 
 .product {
   display: grid;
   gap: 1rem;
-}
 
-@media (width >= 650px) {
-  .product {
+  @media (width >= 650px) {
     grid-template-columns: minmax(200px, min(30%, 250px)) 1fr;
   }
 }
@@ -82,6 +73,7 @@ fieldset {
 
 .form-check-input:checked + .form-image {
   background-color: var(--color-light-gray);
+  outline: 1px solid var(--color-border-checked);
 }
 
 .form-check-input:checked,
@@ -94,7 +86,10 @@ fieldset {
 }
 
 .product-image-container {
+  border: 1px dashed var(--color-border);
+  border-radius: 1rem;
   order: -1;
+  padding-block: 2rem;
   position: relative;
   
   @media (width >= 650px) {
@@ -105,6 +100,8 @@ fieldset {
 .product-color,
 .product-material,
 .product-position {
+  background-color: #f3f5f3;
+  border-radius: 0.5rem;
   cursor: pointer;
   transition: transform 0.5s;
 }
@@ -162,10 +159,6 @@ fieldset {
 
 .form-check-label.checked {
   border: 0.1875rem solid var(--color-border-checked);
-}
-
-.container-fluid {
-  max-width: 60rem;
 }
 
 .page-title {
